--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="pl">
+<head>
+	<meta charset="utf-8" />
+	<title>Test </title>
+	<meta name="description" content="Test2" />
+	<meta name="keywords" content="energetyk, gra, symulator chodzenia" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta name="author" content="Mateusz Tworek"/>
+	
+	<style>
+	
+	</style>
+</head>
+	
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<h1>Energetyk 3D</h1>
+	Więcej infomacji wkrótce <br/><br/>
+	<a href="https://github.com/VoidDave/VoidDave.github.io" target="_blank" title="Projekt z możliwością pobrania (Obecnie brak opcji pobrania)">Github <br/><img width="100" hight="100" src="grafikistr/github.png"/></a> <br/> <br/>
+	<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title="NIERÓB TEGO MÓWIE">Niedotykaj <br/></a>
 </body>
 </html>
