--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 	<meta name="keywords" content="energetyk, gra, symulator chodzenia" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="author" content="Mateusz Tworek"/>
-	
-	<style>
-	
-	</style>
+	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 	
 <body>
