--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
 </head>
 	
 <body>
-	<h1>Energetyk 3D</h1>
-	Więcej infomacji wkrótce <br/><br/>
-	<a href="https://github.com/VoidDave/VoidDave.github.io" target="_blank" title="Projekt z możliwością pobrania (Obecnie brak opcji pobrania)">Github <br/><img width="100" hight="100" src="grafikistr/github.png"/></a> <br/> <br/>
-	<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title="NIE RÓB TEGO MÓWIE">Nie dotykaj <br/></a>
+	<div id="all">
+		<div id="top">
+			<h1>Energetyk 3D</h1>
+		</div>
+		<div id="nav">
+			Więcej infomacji wkrótce 
+		</div>
+		<div id="general">
+			Więcej infomacji wkrótce 
+		</div>
+		<div id="links">
+			<a href="https://github.com/VoidDave/VoidDave.github.io" target="_blank" title="Projekt z możliwością pobrania (Obecnie brak opcji pobrania)">Github <br/><img width="100" hight="100" src="grafikistr/github.png"/></a> <br/> <br/>
+			<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title="NIE RÓB TEGO MÓWIE">Nie dotykaj <br/></a>
+		</div>
+	</div>
+	
 </body>
 </html>
