--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 			<h1>Energetyk 3D</h1>
 		</div>
 		<div id="nav">
-			Więcej infomacji wkrótce 
+			<div class="option">Więcej infomacji wkrótce </div> 
+			<div class="option">Więcej infomacji wkrótce </div> 
+			<div class="option">Więcej infomacji wkrótce </div> 
+			<div class="option">Więcej infomacji wkrótce </div> 
+			<div style= "clear:both;"></div>
 		</div>
 		<div id="general">
 			Więcej infomacji wkrótce 
