--- a/kontakt.html
+++ b/kontakt.html
@@ -19,7 +19,9 @@
 			<a href="index.html">
 				<div class="option">Strona główna </div> 
 			</a>
-				<div class="option">Więcej infomacji wkrótce </div> 
+			<a href="Projekty.html">
+				<div class="option">Projekty </div> 
+			</a> 
 				<div class="option">Więcej infomacji wkrótce </div> 
 			<a href="kontakt.html">
 				<div class="option">Kontakt </div> 
