--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="option">Strona główna </div> 
 			</a>
 			<a href="Projekty.html">
-				<div class="option">Projekty </div> 
+				<div class="option">projekty </div> 
 			</a>
 				<div class="option">Więcej infomacji wkrótce </div> 
 			<a href="kontakt.html">
