--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<a href="index.html">
 				<div class="option">Strona główna </div> 
 			</a>
-			<a href="Projekty.html">
-				<div class="option">projekty </div> 
+			<a href="projekty.html">
+				<div class="option">Projekty </div> 
 			</a>
 				<div class="option">Więcej infomacji wkrótce </div> 
 			<a href="kontakt.html">
