--- a/kontakt.html
+++ b/kontakt.html
@@ -19,7 +19,7 @@
 			<a href="index.html">
 				<div class="option">Strona główna </div> 
 			</a>
-			<a href="Projekty.html">
+			<a href="projekty.html">
 				<div class="option">Projekty </div> 
 			</a> 
 				<div class="option">Więcej infomacji wkrótce </div> 
